add favicon icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="Bruno Luvizotto - Full Stack Developer" />
     <meta name="twitter:description" content="Building modern web applications with clean code and great user experiences." />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Bruno Luvizotto | Full Stack Developer</title>
   </head>
   <body>
